# Cpp_Python_MNIST

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists_Windows.txt  MNIST.odp  README.md  config.example.ini  converter_mnist.cpp  converter_mnist.py  downloader.py  example  example.cpp  mnist.pc.in  mnist_batches.cpp  mnist_batches.py  mnist_example.cpp  mnist_math.cpp  mnist_math.py  mnist_numcpp.cpp  mnist_openblas.cpp  mnist_python_example.py  mnist_pytorch.py  mnist_torch.cpp  mnist_xtensor.cpp  neuralnet.pc.in  pyrefly.toml  requirements.txt
MNIST/: mnist_dataset.py  mnist_image.py
NeuralNet/: neuralnet.py
TorchNet/: torchnet.py
examples/: CMakeLists.txt
examples/mnist_blaze/: CMakeLists.txt  mnist_blaze.cpp
examples/mnist_c_numpy/: CMakeLists.txt  mnist_c_numpy.cpp
examples/mnist_math/: CMakeLists.txt  mnist_math.cpp
examples/mnist_numcpp/: CMakeLists.txt  mnist_numcpp.cpp
examples/mnist_openblas/: CMakeLists.txt  mnist_openblas.cpp
examples/mnist_torch/: CMakeLists.txt  mnist_torch.cpp
examples/mnist_torch_batches/: CMakeLists.txt  mnist_torch_batches.cpp
examples/mnist_torch_example/: CMakeLists.txt  mnist_torch_example.cpp
examples/mnist_xtensor/: CMakeLists.txt  mnist_xtensor.cpp
include/MNIST/: MNIST_Dataset.hpp  MNIST_Image.hpp
include/NeuralNet/: NeuralNet.hpp  NeuralNetNC.hpp  NeuralNetOpenBLAS.h  NeuralNetXT.hpp
include/TorchNet/: torchnet.hpp
include/opencv/include/opencv4/opencv2/: cvconfig.h
include/opencv/lib/: libopencv_imgcodecs.so.4.6.0
include/opencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
include/opencv2/: cvconfig.h
lib/: libopencv_imgcodecs.so.4.6.0
libs/: CMakeLists.txt
libs/mnist/: CMakeLists.txt  MNIST_Dataset.cpp  MNIST_Image.cpp
libs/mnist/include/MNIST/: MNIST_Dataset.hpp  MNIST_Image.hpp
libs/neuralnet/: CMakeLists.txt  NeuralNet.cpp
libs/neuralnet/include/NeuralNet/: NeuralNet.hpp
libs/neuralnet_blaze/: CMakeLists.txt  NeuralNet_Blaze.cpp
libs/neuralnet_blaze/include/NeuralNet_Blaze/: NeuralNet_Blaze.h
libs/neuralnet_cnumpy/: CMakeLists.txt  NeuralNet_CNumpy.cpp
libs/neuralnet_cnumpy/include/NeuralNet_CNumpy/: NeuralNet_CNumpy.h
libs/neuralnetnc/: CMakeLists.txt  NeuralNetNC.cpp
libs/neuralnetnc/include/NeuralNetNC/: NeuralNetNC.hpp
libs/neuralnetopenblas/: CMakeLists.txt  NeuralNetOpenBLAS.cpp
libs/neuralnetopenblas/include/NeuralNetOpenBLAS/: NeuralNetOpenBLAS.h
libs/neuralnetxt/: CMakeLists.txt  NeuralNetXT.cpp
libs/neuralnetxt/include/NeuralNetXT/: NeuralNetXT.hpp
libs/torchnet/: CMakeLists.txt
src/MNIST/: MNIST_Dataset.cpp  MNIST_Image.cpp
src/NeuralNet/: NeuralNet.cpp  NeuralNetNC.cpp  NeuralNetOpenBLAS.cpp  NeuralNetXT.cpp
