if (EXISTS "${PROJECT_SOURCE_DIR}/.venv")
    set(Python3_ROOT_DIR "${PROJECT_SOURCE_DIR}/.venv")
endif ()

set(Python3_FIND_VIRTUALENV FIRST)

find_package(Python3 COMPONENTS Interpreter Development NumPy REQUIRED)
message("Python3_ROOT_DIR ${Python3_ROOT_DIR}")
message("Python3_EXECUTABLE ${Python3_EXECUTABLE}")
message("Python3_SITEARCH ${Python3_SITEARCH}")
message("Python3_NumPy_VERSION ${Python3_NumPy_VERSION}")

add_library(neuralnet_cnumpy STATIC)
if (Python3_ROOT_DIR)
    target_compile_definitions(neuralnet_cnumpy PUBLIC Python3_ROOT_DIR="${Python3_ROOT_DIR}")
    target_compile_definitions(neuralnet_cnumpy PUBLIC Python3_EXECUTABLE="${Python3_EXECUTABLE}")
    target_compile_definitions(neuralnet_cnumpy PUBLIC Python3_SITEARCH="${Python3_SITEARCH}")
    target_compile_definitions(neuralnet_cnumpy PUBLIC Python3_STDLIB="${Python3_STDLIB}")
endif (Python3_ROOT_DIR)
target_sources(neuralnet_cnumpy PRIVATE NeuralNet_CNumpy.cpp)
target_include_directories(neuralnet_cnumpy PUBLIC include)
target_link_libraries(neuralnet_cnumpy PUBLIC Python3::Python Python3::Module Python3::NumPy)

if (USE_SIMD)
    target_compile_options(neuralnet_cnumpy PUBLIC ${SIMD_FLAGS_COMPILER})
    target_link_options(neuralnet_cnumpy PUBLIC ${SIMD_FLAGS_LINKER})
endif ()
